Resolve Compiler Warnings in TableFactory Module (#54)
* Initial plan

* Fix Vector raw types and deprecated Double.valueOf() calls in TableFactory module

Co-authored-by: natechadwick <1232206+natechadwick@users.noreply.github.com>

* Complete elimination of raw types and unchecked operation warnings in TableFactory

Co-authored-by: natechadwick <1232206+natechadwick@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: natechadwick <1232206+natechadwick@users.noreply.github.com>
Co-authored-by: Nate Chadwick <nate.chadwick@intsof.com>